# Mnist-gradio-project

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt  train.ipynb
docs/: index.html  style.css
models/: mnist_trained_model.h5
